[gd_scene load_steps=11 format=2]

[ext_resource path="res://wpnsys/hurt_stuff/Gun.gd" type="Script" id=1]
[ext_resource path="res://raw_sprites/smallfish.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/toxic_fish_minions/fish_minion.gd" type="Script" id=3]
[ext_resource path="res://wpnsys/hurt_stuff/darkpistolresourcepacker.gd" type="Script" id=4]
[ext_resource path="res://wpnsys/hurt_stuff/commongundata.gd" type="Script" id=5]
[ext_resource path="res://bullets/stinger_bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/introscorpion/Flippables.gd" type="Script" id=7]

[sub_resource type="Resource" id=4]
script = ExtResource( 5 )
gun_name = ""
gun_desc = ""
gun_fire_mode = 2
fires_before_charging = false
pellet_count = 1
burst_count = 1
cooldown = 1.3
max_charge = 1.0
spread = 0.0
recoil = 0.0
rotation_recoil = 0.0
damage = 1
speed = 200
bullet_lifetime = 5.0
no_cooldown = false

[sub_resource type="Resource" id=3]
script = ExtResource( 4 )
data_res = SubResource( 4 )
bullet = ExtResource( 6 )

[sub_resource type="Animation" id=1]
resource_name = "spitit"
length = 0.233
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.136834 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Flippables" type="Node2D" parent="."]
script = ExtResource( 7 )
is_moving_y = true
has_sthing = false

[node name="Node2D" type="Node2D" parent="Flippables"]
script = ExtResource( 1 )
_gun_data = SubResource( 3 )
is_enemy = true

[node name="SpriteSheet" type="Sprite" parent="Flippables/Node2D"]
unique_name_in_owner = true
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="Position2D" type="Position2D" parent="Flippables/Node2D"]

[node name="Cooldown" type="Timer" parent="Flippables/Node2D"]
unique_name_in_owner = true
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Flippables/Node2D"]

[node name="Node" type="Node" parent="Flippables/Node2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flippables/Node2D"]
unique_name_in_owner = true
anims/spitit = SubResource( 1 )

[node name="Timer" type="Timer" parent="Flippables/Node2D"]
wait_time = 4.5
one_shot = true
autostart = true

[connection signal="charging" from="Flippables/Node2D" to="." method="_on_Node2D_charging"]
[connection signal="fired" from="Flippables/Node2D" to="." method="_on_Node2D_fired"]
[connection signal="fullypoweredup" from="Flippables/Node2D" to="." method="_on_Node2D_fullypoweredup"]
[connection signal="proj_created" from="Flippables/Node2D" to="." method="_on_Node2D_proj_created"]
[connection signal="timeout" from="Flippables/Node2D/Timer" to="." method="_on_Timer_timeout"]
